[package]
name = "dpsa4fl"
version = "0.1.0"
edition = "2021"

[dependencies]
janus_client = { git = "https://github.com/dpsa-project/janus.git", branch = "dpsa-deploy" }
janus_core = { git = "https://github.com/dpsa-project/janus.git", branch = "dpsa-deploy" }
janus_messages = { git = "https://github.com/dpsa-project/janus.git", branch = "dpsa-deploy" }
janus_aggregator = { git = "https://github.com/dpsa-project/janus.git", branch = "dpsa-deploy" }
janus_collector = { git = "https://github.com/dpsa-project/janus.git", branch = "dpsa-deploy" }
# prio = { version = "0.10.0", features = ["multithreaded"] }
prio = {git = "https://github.com/dpsa-project/libprio-rs.git", branch ="fixedpoint-backported-bugfix", features = ["multithreaded"]}
url = { version = "2.3.1" }
anyhow = "1.0"
reqwest = "0.11.12"
async-std = "0.99.12"
fixed = "1.19"
base64 = "0.13.0"

[lib]
crate-type = ["lib"]
