[package]
name = "dpsa4fl"
version = "0.1.0"
edition = "2021"

[dependencies]
janus_client = { git = "https://github.com/divviup/janus.git" }
janus_core = { git = "https://github.com/divviup/janus.git", features = ["fpvec_bounded_l2"] }
janus_messages = { git = "https://github.com/divviup/janus.git" }
janus_aggregator = { git = "https://github.com/divviup/janus.git", features = ["fpvec_bounded_l2"] }
janus_aggregator_core = { git = "https://github.com/divviup/janus.git" }
janus_collector = { git = "https://github.com/divviup/janus.git", features = ["fpvec_bounded_l2"] }
prio = { version = "0.15.3", features = ["multithreaded", "experimental"] }
url = { version = "2.3.1" }
anyhow = "1.0"
async-std = "0.99.12"
fixed = { version = "1.23", features = ["serde"] }

# old janus arch
signal-hook = "0.3.15"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures = "0.3.28"

# just tokio
tokio = { version = "1.25", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1", "array-impls"] }

rand = { version = "0.8", features = ["min_const_gen"] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.17"

reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "json"] }
warp = { version = "0.3", features = ["tls"] }
http = "0.2.9"



opentelemetry = { version = "0.18", features = ["metrics", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.17", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11", optional = true, features = ["metrics"] }  # ensure that the version of tonic below matches what this uses
opentelemetry-prometheus = { version = "0.11", optional = true }
opentelemetry-semantic-conventions = { version = "0.10", optional = true }


tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-opentelemetry = { version = "0.18", optional = true }
tracing-stackdriver = "0.6.2"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt", "json"] }

clap = { version = "4.1.6", features = ["derive", "env"] }
base64 = "0.21.0"
num-traits = "0.2"

downcast-rs = "1.2"
dyn-clone = "1.0"

[dev-dependencies]
fixed-macro = "1.2.0"

[lib]
crate-type = ["lib"]
